<resources>
    <string name="app_name">WellnessTracker</string>
    <string name="hint_weight">Your weight</string>
    <string name="kg">kg</string>
    <string name="hint_et_weight">Your weight</string>
    <string name="hint_et_Height">Your height</string>
    <string name="metersHeight">m</string>
    <string name="compute_bmi">Compute BMI</string>
    <string name="resultLabel">Result:</string>
    <string name="bmiResult"></string>
    <string name="bmi">BMI</string>

    <string name="extremely_underweight">You are extremely underweight! You should see a doctor ASAP!</string>
    <string name="underweight">You are underweight! You should see a doctor!</string>
    <string name="normal">Your weight is normal, congratulations!</string>
    <string name="overweight">Your weight is a bit above the normal, be careful!</string>
    <string name="obese">You are obese! You should see a doctor!</string>
    <string name="extremely_obese">You are extremely obese! You should see a doctor ASAP!</string>
    <string name="calendar">Calendar</string>
    <string name="select_date">Select date:</string>
    <string name="notes">Notes</string>
    <string name="tv_dateNotes">TextView</string>
    <string name="notesHint">Introduce the exercises you\'ve done and the repetitions for the selected date.</string>
    <string name="workout">Workout</string>
    <string name="nutrition">Nutrition</string>
    <string name="type_a_meal">Type in a meal:</string>
    <string name="nutritional_properties">Nutritional properties:</string>
    <string name="energy_kcal">Energy(kcal);</string>
    <string name="protein_g">Protein(g):</string>
    <string name="fat_g">Fat(g):</string>
    <string name="carbs_g">Carbs(g):</string>
    <string name="go">Go</string>
    <string name="fibers_g">Fibers(g):</string>
    <string name="search_for_an_exercise">Search for an exercise:</string>
    <string name="show_details">Show details</string>
    <string name="you_selected">You selected: </string>
    <string name="e_g_lasagna">e.g.: lasagna</string>
    <string name="bmi_diagnostic">BMI: %1$s \nDiagnostic: %2$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="exercises_report">Exercises Report</string>
    <string name="notes_report">Notes Report</string>
    <string name="selectedExercise_category">Body Part:\u0020</string>
    <string name="selectedExercise_equipment">Equipment:\u0020</string>
    <string name="hello">Hello,\u0020</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="avatar">Avatar</string>
    <string name="restore_avatar">Restore Avatar</string>
    <string name="no_user_found_in_Firebase">No user found in Firebase</string>
    <string name="pinkygradientcircle">pinkyGradientCircle</string>
    <string name="google_maps_key">AIzaSyCASe5mkXYmcSZnETfUAuJU2Tpt-7uE4CI</string>
    <string name="title_activity_google_maps">Map</string>
</resources>
