<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_bmiActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/btn_calendarActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <Button
        android:id="@+id/btn_workoutActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

    <Button
        android:id="@+id/btn_calendarActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <Button
        android:id="@+id/btn_nutritionActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:text="@string/nutrition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_workoutActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

    <Button
        android:id="@+id/btn_allUsers"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:text="@string/exercises_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_workoutActivity" />

    <Button
        android:id="@+id/btn_allNotes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/notes_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_allUsers"
        app:layout_constraintTop_toBottomOf="@+id/btn_nutritionActivity"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/tv_helloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/iv_userAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_setAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/choose_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn_saveAvatar"
        android:layout_width="37dp"
        android:layout_height="27dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/icons8_save_16px"
        app:layout_constraintBottom_toBottomOf="@+id/iv_userAvatar"
        app:layout_constraintEnd_toEndOf="@+id/iv_userAvatar"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="@+id/iv_userAvatar"
        app:layout_constraintTop_toTopOf="@+id/iv_userAvatar"
        app:layout_constraintVertical_bias="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>